# internal/adapters/delivery/docs/swagger.yaml
@@ -63,6 +63,13 @@ definitions:
         example: "123456"
         type: string
     type: object
+  request.UserDeleteDTO:
+    properties:
+      email:
+        type: string
+      name:
+        type: string
+    type: object
   request.UserLoginDTO:
     properties:
       email:
@@ -86,6 +93,8 @@ definitions:
     properties:
       answer:
         type: string
+      created_at:
+        type: string
       discipline:
         type: string
       id:
@@ -102,7 +111,36 @@ definitions:
         type: string
       topic:
         type: string
+      updated_at:
+        type: string
       year:
+        type: string
+    type: object
+  response.UserDTO:
+    properties:
+      admin:
+        example: false
+        type: boolean
+      created_at:
+        example: "2021-08-01T00:00:00Z"
+        type: string
+      email:
+        example: dudu@gmail.com
+        type: string
+      id:
+        example: 550e8400-e29b-41d4-a716-446655440000
+        type: string
+      is_active:
+        example: true
+        type: boolean
+      name:
+        example: Eduardo Melo
+        type: string
+      password:
+        example: "123456"
+        type: string
+      updated_at:
+        example: "2021-08-01T00:00:00Z"
         type: string
     type: object
 info:
@@ -276,6 +314,51 @@ paths:
       tags:
       - Question
   /user:
+    delete:
+      consumes:
+      - application/json
+      description: Deleta um usuário
+      parameters:
+      - description: Dados do usuário
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/request.UserDeleteDTO'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.InfoResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+      summary: Deleta um usuário
+      tags:
+      - User
+    get:
+      consumes:
+      - application/json
+      description: Lista os usuários
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/response.UserDTO'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+      summary: Lista os usuários
+      tags:
+      - User
     post:
       consumes:
       - application/json
@@ -299,6 +382,31 @@ paths:
           schema:
             $ref: '#/definitions/response.ErrorResponse'
       summary: Cria um usuário
+      tags:
+      - User
+  /user/{email}:
+    get:
+      consumes:
+      - application/json
+      description: Busca um usuário pelo email
+      parameters:
+      - description: Email do usuário
+        in: path
+        name: email
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.UserDTO'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+      summary: Busca um usuário pelo email
       tags:
       - User
   /user/signin:
@@ -331,7 +439,7 @@ paths:
     get:
       consumes:
       - application/json
-      description: Verifica se o usuário está logado ou é admin
+      description: Verifica o tipo do usuário
       parameters:
       - description: Token de autenticação
         in: header
@@ -349,7 +457,7 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/response.ErrorResponse'
-      summary: Verifica se o usuário está logado ou é admin
+      summary: Verifica o tipo do usuário
       tags:
       - User
 securityDefinitions:
