# internal/adapters/persistence/postgres/bridge/models.go
@@ -16,6 +16,7 @@ type User struct {
 	Email     string
 	Password  string
 	Admin     bool
+	IsActive  bool
 	CreatedAt time.Time
 	UpdatedAt time.Time
 }
